FIxed z-index

--- a/Código fuente sin compilar/PlanDeEntrenamiento/src/app/core/layout/layout.component.scss
+++ b/Código fuente sin compilar/PlanDeEntrenamiento/src/app/core/layout/layout.component.scss
@@ -27,7 +27,6 @@
 
   :host > :nth-child(3) {
     margin-top: -20px;
-    z-index: 1000000;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
